--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -20,7 +20,7 @@ on:
       - stable
       - release/*
   schedule:
-    - cron: '0 6 * * *' # every day at 6:00 UTC
+    - cron: '20 6 * * 1' # every Monday at 6:20 UTC
 
 env:
   GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
