--- a/docs/examples/wasm/webpack/package.json
+++ b/docs/examples/wasm/webpack/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^9.0.1",
+    "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
