Run WasmThemis jobs when examples change

--- a/.github/workflows/test-wasm.yaml
+++ b/.github/workflows/test-wasm.yaml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths:
       - '.github/workflows/test-wasm.yaml'
+      - 'docs/examples/wasm/**'
       - 'src/soter/**'
       - 'src/themis/**'
       - 'src/wrappers/themis/wasm/**'
