--- a/src/wrappers/themis/wasm/tsconfig.json
+++ b/src/wrappers/themis/wasm/tsconfig.json
@@ -2,14 +2,14 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "declaration": true,
-    "target": "es5",
+    "target": "es6",
     "lib": [ "es2015", "dom" ],
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "dist/"
+    "outDir": "dist-es6/"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
