Keep a copy of libthemis.wasm in "src"
That's where this file is located in WasmThemis 0.13.X and some users
might have hardcoded its location (like it's hardcoded in WasmThemis
example with webpack, for example). Let's package the original copy
of libthemis.wasm at its original path, for compatibility.

This makes installed, unpackaged size a bit larger, but JavaScript
developers are used to "node_modules" being heavier then their mom
so it's okay. And this does not affect downloads, since idenitical
files are compressed with deduplication.

--- a/src/wrappers/themis/wasm/package.json
+++ b/src/wrappers/themis/wasm/package.json
@@ -11,7 +11,8 @@
     "dist/libthemis.wasm",
     "dist-es6/*.js",
     "dist-es6/*.ts",
-    "dist-es6/libthemis.wasm"
+    "dist-es6/libthemis.wasm",
+    "src/libthemis.wasm"
   ],
   "scripts": {
     "test": "find test -name *.js | sort | xargs -L1 ts-mocha -p tsconfig.json",
