CI: Work around legacy Node.js 8.x issues
As described in referenced issue, Node.js 8.x tends to cause crashes
because it embeds OpenSSL 1.0.2 when Themis has been built against
OpenSSL 1.1.1. It seems before all these changes for OpenSSL 3.0
compatibility we somehow avoided calling any APIs that have actually
broken binary compatiblity between 1.0.2 and 1.1.1, but now we do.

The documented workaround is to use BoringSSL build so BoringSSL we use.
That's going to check this workaround in the first place, lol.

--- a/.github/workflows/test-nodejs.yaml
+++ b/.github/workflows/test-nodejs.yaml
@@ -48,10 +48,19 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Check out code
         uses: actions/checkout@v2
+        with:
+          submodules: true
       - name: Install Themis Core
+        env:
+          NODE_VERSION: ${{ matrix.node-version }}
         run: |
+          # Workaround for Node.js 8.x using OpenSSL 1.0.2 when Themis is built against OpenSSL 1.1
+          # https://github.com/cossacklabs/themis/issues/657
+          if [[ "$NODE_VERSION" = "8.x" ]]; then
+            export ENGINE=boringssl
+          fi
           make
-          sudo make install
+          sudo -E make install
       - name: Run test suite
         run: |
           echo Node.js: $(node --version)
