CI: Use the same environment for building and running tests
Turns out, if you don't set ENGINE=boringssl for "make test" then
it will helpfully build missing OpenSSL parts of Soter and relink
everything with OpenSSL (while retaining BoringSSL-built binaries).

Previously this issue was masked because all Soter structures had
the same memory layout for both OpenSSL and BoringSSL. However, with
various EVP_PKEY/EVP_PKEY_CTX perturbations the layouts are no longer
bug-compatible. Use the correct way to run tests from different build
directories with different configurations.

--- a/.github/workflows/test-core.yaml
+++ b/.github/workflows/test-core.yaml
@@ -67,13 +67,13 @@ jobs:
         run: make prepare_tests_basic WITH_SCELL_COMPAT=yes BUILD_PATH=build-compat
       - name: Run test suite (OpenSSL)
         if: always()
-        run: make test BUILD_PATH=build-openssl
+        run: make test ENGINE=openssl BUILD_PATH=build-openssl
       - name: Run test suite (BoringSSL)
         if: always()
-        run: make test BUILD_PATH=build-boringssl
+        run: make test ENGINE=boringssl BUILD_PATH=build-boringssl
       - name: Run test suite (WITH_SCELL_COMPAT)
         if: always()
-        run: make test BUILD_PATH=build-compat
+        run: make test WITH_SCELL_COMPAT=yes BUILD_PATH=build-compat
       - name: Ensure OpenSSL 3.0 fails (macOS only)
         if: ${{ matrix.os == 'macos-latest' }}
         run: |
