CI: Unroll and tweak OpenSSL 3.0 build that should fail
First, that's a tad long command line. Set all these variables in
environment instead of cramming them into make's command line.

Second, I'm going to need that "build-openssl-3.0" directory for legit
testing with OpenSSL. Use a different directory for this test -- which
is about OpenSSL 3.0 build failing in absence of
WITH_EXPERIMENTAL_OPENSSL_3_SUPPORT being set.

--- a/.github/workflows/test-core.yaml
+++ b/.github/workflows/test-core.yaml
@@ -80,7 +80,10 @@ jobs:
           # Themis uses OpenSSL 1.1 by default if installed.
           # Explicitly request OpenSSL 3.0 by pointing the build into OpenSSL 3.0's paths.
           openssl3=$(brew --prefix openssl@3)
-          if ! make ENGINE=openssl BUILD_PATH=build-openssl-3.0 ENGINE_INCLUDE_PATH=$openssl3/include ENGINE_LIB_PATH=$openssl3/lib
+          export ENGINE=openssl
+          export ENGINE_INCLUDE_PATH="$openssl3/include"
+          export ENGINE_LIB_PATH="$openssl3/lib"
+          if ! make BUILD_PATH=build-openssl-3.0-without-magic-word
           then
             true
           else
